log
Wed 27 Mar 2024 11:37:11 PM UTC: 
 tests:  0|6
total_score: 0/70
cb22561
Thu 28 Mar 2024 02:50:21 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b6dd1ce
Thu 28 Mar 2024 02:55:19 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘nextList’:
list.c:45:31: error: ‘*newlist.head’ is used uninitialized [-Werror=uninitialized]
   45 |     newlist->current = newlist->head->next;
      |                        ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
ccac641
Thu 28 Mar 2024 02:56:51 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
001bcda
Thu 28 Mar 2024 02:58:14 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
b800dc8
Thu 28 Mar 2024 02:58:53 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
46b73dc
Thu 28 Mar 2024 02:59:11 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘firstList’:
list.c:42:12: error: ‘*newlist.head’ is used uninitialized [-Werror=uninitialized]
   42 |     newlist->head->next = NULL;
      |     ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
a8c2b1c
